# openfortigui

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openfortigui-project.pro  openfortigui.pro  res.qrc  ticonfmain.cpp  ticonfmain.h  vpnapi.cpp  vpnapi.h  vpngroup.cpp  vpngroup.h  vpngroupeditor.cpp  vpngroupeditor.h  vpngroupeditor.ui  vpnhelper.cpp  vpnhelper.h  vpnlogger.cpp  vpnlogger.h  vpnlogin.cpp  vpnlogin.ui  vpnmanager.cpp  vpnmanager.h  vpnotplogin.cpp  vpnprofile.cpp  vpnprofile.h  vpnprofileeditor.cpp  vpnprofileeditor.h  vpnprofileeditor.ui  vpnsetting.cpp  vpnsetting.ui  vpnworker.cpp  vpnworker.h  (+2 more)
app-entry/: openfortigui.desktop
debian/: changelog  control  rules
krunner_openfortigui/: CMakeLists.txt  README.md  krunner_openfortigui.cpp  krunner_openfortigui.h  plasma-runner-openfortigui.desktop  test_plugin.sh  ticonfmain.cpp  ticonfmain.h  vpnhelper.cpp  vpnhelper.h
krunner_openfortigui/debian/: changelog  control  postinst  postrm  rules
lang/: openfortigui_de.qm  openfortigui_de.ts
openfortigui/: Makefile  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openfortigui  openfortigui.pro  res.qrc  setupwizard.cpp  setupwizard.h  setupwizard.ui  ticonfmain.cpp  ticonfmain.h  vpnapi.cpp  vpnapi.h  vpnchangelog.cpp  vpnchangelog.h  vpnchangelog.ui  vpngroup.cpp  vpngroup.h  vpngroupeditor.cpp  vpngroupeditor.h  vpngroupeditor.ui  vpnhelper.cpp  vpnhelper.h  vpnlogger.cpp  vpnlogger.h  vpnlogin.cpp  vpnlogin.h  vpnlogin.ui  vpnmanager.cpp  vpnmanager.h  vpnotplogin.cpp  vpnotplogin.h  vpnotplogin.ui  vpnprofile.cpp  vpnprofile.h  vpnprofileeditor.cpp  vpnprofileeditor.h  (+4 more)
openfortigui/app-entry/: .directory
openfortigui/debian/: changelog  control  rules
openfortigui/img/: .directory
openfortigui/lang/: openfortigui_ca.qm  openfortigui_ca.ts  openfortigui_de.qm  openfortigui_de.ts  openfortigui_es.qm  openfortigui_es.ts  openfortigui_ja.qm  openfortigui_ja.ts
openfortigui/openfortivpn_local/src/: http.c  userinput.c
openfortigui/proc/: vpnbarracuda.cpp  vpnbarracuda.h  vpnprocess.cpp  vpnprocess.h  vpnworker.cpp  vpnworker.h
openfortigui/sudo/: openfortigui
openfortivpn_local/src/: http.c
proc/: vpnprocess.cpp  vpnprocess.h  vpnworker.cpp  vpnworker.h
